--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+papas (0.9ubuntu1) lucid; urgency=low
+
+  * Fix urls.py
+
+ -- Vincent Vinet <vvinet@revolutionlinux.com>  Tue, 14 Sep 2010 10:23:49 -0400
+
+papas (0.9) lucid; urgency=low
+
+  * Rename to papas, get ready for version 1
+
+ -- Vincent Vinet <vvinet@revolutionlinux.com>  Tue, 14 Sep 2010 09:48:51 -0400
+
 apmanager (1.0.4) hardy; urgency=low
 
   * Execution de commandes sur des groupes
