--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+papas (0.9ubuntu2) lucid; urgency=low
+
+  * More bugfixes
+  * UI improvements
+
+ -- Vincent Vinet <vvinet@revolutionlinux.com>  Fri, 24 Sep 2010 15:32:35 -0400
+
 papas (0.9ubuntu1) lucid; urgency=low
 
   * Fix urls.py
