--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+papas (0.9ubuntu3) lucid; urgency=low
+
+  * Bugfixes
+
+ -- Vincent Vinet <vvinet@revolutionlinux.com>  Wed, 06 Oct 2010 10:07:33 -0400
+
 papas (0.9ubuntu2) lucid; urgency=low
 
   * More bugfixes
