--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+papas (0.9ubuntu4) lucid; urgency=low
+
+  * Add paramiko support for SSH
+  * Bugfixes
+
+ -- Vincent Vinet <vvinet@revolutionlinux.com>  Thu, 07 Oct 2010 08:34:21 -0400
+
 papas (0.9ubuntu3) lucid; urgency=low
 
   * Bugfixes
