Attempt to fix bug #223 - errors on reboot
- Create a new console tag that catches ConnectionLost errors and
  returns a success instead
- Catch pexpect and paramiko EOFError and throw a ConnectionLost
- Partial changelog update as some rc's were deployed

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+papas (1.0.0-ubuntu2~rc7) lucid; urgency=low
+
+  * Add parameter overview page
+  * Add AP clone page
+  * Add Protocol Support and priority management
+  * Fix SSH support for Cisco with Interactive mode
+  * Add 'allow_connection_lost' template tag
+
+ -- Vincent Vinet <vvinet@revolutionlinux.com>  Fri, 22 Oct 2010 14:52:38 -0400
+
 papas (0.9ubuntu5) lucid; urgency=low
 
   * Add paramiko dependencies
