--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+papas (1.0.0-ubuntu2) lucid; urgency=low
+
+  * Last Fix. Everything should be fine now
+
+ -- Vincent Vinet <vvinet@revolutionlinux.com>  Thu, 16 Dec 2010 12:53:50 -0500
+
 papas (1.0.0-ubuntu2~rc7) lucid; urgency=low
 
   * Add parameter overview page
